@@ -1,7 +1,7 @@
 # distributed.net client makefile for VC
 # see http://www.distributed.net/
 #
-# $Id: makefile.vc,v 1.83.2.15 2005/05/09 19:57:57 jlawson Exp $
+# $Id: makefile.vc,v 1.83.2.16 2005/05/09 21:04:56 jlawson Exp $
 #
 
 BASENAME = dnetc
@@ -269,7 +269,8 @@ RC5_72_OBJS =                        \
         $(OUTPUTPATH)/r72-dg3a.obj   \
         $(OUTPUTPATH)/r72-ss2.obj    \
         $(OUTPUTPATH)/r72-go2.obj    \
-        $(OUTPUTPATH)/r72-sgp3.obj
+        $(OUTPUTPATH)/r72-sgp3.obj   \
+        $(OUTPUTPATH)/r72-ma4.obj
 OPTS_MSVC = $(OPTS_MSVC) -DHAVE_RC5_72_CORES
 !else
 !error No RC5-72 cores for this architecture.
