@@ -21,7 +21,7 @@ Version bump guide:
   `------------- Denotes a client rewrite.
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.89 2005/05/07 20:57:51 kakace Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.90 2005/05/09 21:04:56 jlawson Exp $
 ==========================================================================
 
 2.9000
@@ -29,6 +29,7 @@ Version change log: $Id: CHANGES.txt,v 1.14.2.89 2005/05/07 20:57:51 kakace Exp 
 2.9010-495  fix: x86: Fixed cores dg3, sgp3 and snjl.
             new: all: Added a stress-test for RC5-72 cores
             imp:macosx: Revised temperature monitoring for G5
+            new: x86: Add new core ma4 (#3415)
 
 2.9009-494  chg: all: Major clean up in the OGR core base
             imp: ppc: Modified KOGE cores - should be faster in most cases
